# ninja

./: README.md  pyproject.toml
sandbox/: check.csv  dev.ipynb  gen_pitchers.py
src/: geom.py  graphics.py  utils.py
src/ninjalytics/: agg.py  data.py  geom.py  graphics.py  utils.py
src/ninjalytics/data/: pitchers.parquet
