[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ninjalytics"
version = "0.0.1"
authors = [
  { name="Andrew Patton", email="anpatt7@gmail.com" },
]
description = "Tools for working with MLB pitching data in the style of Pitching Ninja (Rob Friedman)"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pybaseball",
    "polars",
    "scikit-learn"
]

[project.urls]
"Homepage" = "https://github.com/anpatton/ninjalytics"